# darias_boxplots

./: .gitignore  README.md  pyproject.toml  python_run.bat
darias_boxplots/: __main__.py  app.py  darias_boxplots.py  widgets.py
darias_boxplots/widgets/: widgets.py
src/darias-boxplots/: app.py
