[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "darias_boxplots"
description = "Boxplot generator for Daria"
version = "2.2"
authors = ["Marcell Ziegler <marcell.ziegler.22@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
packages = [
    { include = "darias_boxplots/app.py" },
    { include = "darias_boxplots/widgets/widgets.py" },
]


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
matplotlib = "^3.4"
numpy = "^1.26"
pandas = "^2.1.1"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
boxplots = "darias_boxplots.app:main"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
pyinstaller = "^6.0.0"
